@startuml COFFEE 

  entity Users{
    user_id[PK]
    user_name
    user_email
    user_password
  }

  entity Items{
    item_id[PK]
    userCategory_id[FK]
    item_title
    item_detail
    item_status
    item_created_date[FK]
    item_start_date[FK]
    item_end_date[FK]
  }

  entity Calendar{
    calendar_date[PK]
  }

  entity Category{
    category_id[FK]
    category_name
  }

  entity UserCategory {
    userCategory_id[PK]
    user_id[FK]
    category_id[FK]
  }

  hide empty methods

  Calendar||--|{Items
  Items}|-l-||UserCategory
  Users ||--|{ UserCategory
  UserCategory }|--|| Category

@enduml